posiGen_FullsendBox/src/objects/Sync_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Record_Id__c</fullName>
        <label>Failed Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sync Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Failed_Record_Id__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Sync Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>